# Linear_Algebra

./: CMakeLists.txt  log.txt  main.cpp
headers/database/: Data.hpp  DataBase.hpp  DefaultValues.hpp  MapTabel.hpp
headers/interface/: intepreter.hpp
headers/libraries/: algebra.hpp  exception.hpp  file.hpp  parsing.hpp  syntax.hpp  terminal.hpp
sources/database/: DataBase.cpp  DefaultValues.cpp  MapTabel.cpp
sources/interface/: intepreter.cpp
sources/libraries/: algebra.cpp  exception.cpp  parsing.cpp  syntax.cpp
